# NumPygeons.jl

./: .gitignore  Project.toml  README.md
.github/workflows/: CI.yml
numpygeons/: README.md  numpygeons.py  pyproject.toml
numpygeons/numpygeons/: bridge.py  toy_examples.py
scripts/: example_usage.py  setup_envs.sh
src/: AutoStepExplorer.jl  NumPygeons.jl  NumPyroExplorer.jl  NumPyroPath.jl  interface.jl  recorders.jl  utils.jl
test/: Project.toml  runtests.jl  setup.jl
