[project]
name = "numpygeons"
version = "0.1.0"
description = "Python internals for the NumPygeons.jl Julia package"
authors = [
    {name = "Miguel Biron-Lattes",email = "miguelbl9@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill",
    "jax",
    "numpyro",
    "autostep @ git+https://github.com/UBC-Stat-ML/autostep.git"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
